@@ -18,7 +18,7 @@ Description: This package implements methods to analyze and visualize
     functional profiles (GO and KEGG) of gene and gene clusters.
 Depends:
     R (>= 3.3.1),
-    DOSE (>= 3.0.1)
+    DOSE (>= 3.1.3)
 Imports:
     AnnotationDbi,
     ggplot2,
