@@ -1,5 +1,6 @@
 CHANGES IN VERSION 3.3.4
 ------------------------
+ o bug fixed of download_KEGG for supporting different keyType <2017-01-03, Mon>
  o split 3 GO sub-ontologies for enrichGO <2016-12-12, Mon>
  o dotplot for compareClusterResult to support 3 GO sub-ontologies <2016-12-8, Thu>
  o bug fixed of determine `ont` from `expand.dots` <2016-12-06, Mon>
